assets/style.css
/*

@TODO 
Add media query or something to fix the fact that bg image is too short for larger screens (2000px plus)
and also that icons and header h1s dont align with rest of content either then

Add VIEW LIVE button to projects that link to deplayed ver

Look into stray unclosed divs
see:
https://validator.w3.org/nu/?doc=https%3A%2F%2Famanda-w.netlify.app%2F&__cf_chl_tk=zlZFYrp9FDdcB7j16PQ6I6A97VwWlzdjGjH_3XBUTjU-1663783548-0-gaNycGzNB-U

fix other issues form validator

*/

/* general styles */

:root {
  --black: #0f0f0f;
  --white: #ffffff;
  --heading: #88635c;
  --tagbg: #88635c;
  --imageframe: #f5f5f5;
  --headerfallback: #dfa0a9;
  --sectionbg: #fdf5f8;
  --accent: #d54887;
}

body {
  font-size: 16px;
  color: var(--black);
}

a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
  color: var(--black);
}

:focus {
  outline-color: var(--black);
  outline-width: medium;
  outline-style: solid;
  outline-offset: 4px;
}

.page-section {
  padding: 60px 0;
}

.inner-wrapper {
  width: 90%;
  max-width: 800px;
  margin: 0 auto;
}

.section-title {
  text-align: center;
  font-family: "Roboto", sans-serif;
  font-size: 28px;
  font-weight: 700;
  text-transform: uppercase;
  padding-bottom: 40px;
  letter-spacing: 1px;
  color: var(--white);
}

.section-title-background {
  background-color: var(--heading);
  padding: 3px;
}

.subheading {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-size: 25px;
  text-transform: uppercase;
  text-align: center;
  padding-top: 80px;
  padding-bottom: 40px;
  color: var(--maincolour);
}

.highlight {
  color: #d54887;
}

.bold {
  font-weight: 700;
}

/* HEADER */

.main-header {
  width: 100%;
  height: 475px;
  background-image: url("./images/header.jpg");
  background-color: var(--headerfallback);
  position: relative;
}

.header-wrapper {
  width: 70%;
  max-width: 800px;
  margin: 0 auto;
}

.header-icons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 10px;
  margin: 0 auto;
  position: absolute;
  top: 40px;
  right: 10%;
}

.header-icon-container {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 2px solid var(--black);
  display: grid;
}

.header-icon {
  width: 20px;
  height: 20px;
  align-self: center;
  justify-self: center;
  fill: var(--black);
}

.header-text-wrapper {
  position: absolute;
  top: 30%;
  max-width: 300px;
}

.header-text-name {
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  color: var(--black);
}

.header-text-title {
  font-family: "Montserrat", sans-serif;
  text-transform: lowercase;
  color: var(--black);
  font-size: 46px;
  padding-top: 10px;
  font-weight: 700;
  line-height: 1.2;
}

.header-text-other-title {
  font-family: "Montserrat", sans-serif;
  text-transform: lowercase;
  color: var(--black);
  font-size: 24px;
  padding-top: 10px;
  font-weight: 700;
  line-height: 1.2;
}

.profile-image {
  position: absolute;
  right: 10%;
  bottom: -5%;
  border-radius: 50%;
  width: 150px;
  height: 150px;
  border: 3px solid var(--imageframe);
  overflow: hidden;
}

.profile-image > img {
  width: 100%;
}

/* INTRO */

.intro {
  background-color: var(--sectionbg);
}

.line {
  border: 1px solid var(--accent);
  width: 40px;
  display: inline-block;
  margin-bottom: 4px;
}

.dot {
  height: 10px;
  width: 10px;
  background-color: var(--accent);
  border-radius: 50%;
  display: inline-block;
}

.intro-text {
  font-family: "Montserrat", sans-serif;
  text-align: left;
  line-height: 1.6;
}

/* TECH */

.tech {
  background-color: var(--white);
}

.tech-text {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
}

/* PROJECTS */

.projects {
  background-color: var(--maincolour);
  justify-content: center;
}

/* featured projects */

.featured-projects-container {
  display: grid;
  gap: 30px;
}

.featured-project-card {
  grid-column: span 2;
}

.project-card:hover .project-name-wrapper {
  background: rgba(0, 0, 0, 0.6);
}
.project-card:hover .project-name-wrapper {
  opacity: 0;
  transform: translateY(-90%);
}
.project-card:hover .project-image {
  transform: scale(1.05);
}

.project-header {
  height: 200px;
  position: relative;
  overflow: hidden;
}

.project-name-wrapper {
  position: absolute;
  background: rgba(0, 0, 0, 0.6);
  width: 100%;
  top: 0;
  height: 100%;
  transition: background ease 300ms;
}

.project-image {
  position: absolute;
  object-fit: cover;
  width: 100%;
  height: 100%;
  transition: all 300ms ease;
}

.project-name {
  position: absolute;
  top: 50%;
  width: 100%;
  transform: translateY(-50%);
  color: var(--white);
  padding: 0;
  line-height: 20px;
  text-align: center;
  transition: all 300ms ease;
  text-transform: uppercase;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-size: 18px;
  letter-spacing: 1px;
}

.project-description-title {
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  color: var(--accent);
  padding-top: 22px;
  line-height: 1.6;
}

.project-description-text {
  font-family: "Roboto", sans-serif;
  padding-bottom: 5px;
  line-height: 1.5;
}

/* other projects */

.other-projects-container {
  display: grid;
  gap: 20px;
  max-width: 800px;
}

.other-projects-item {
  grid-column: span 1;
}

.other-projects-description {
  line-height: 1.4;
}

.other-project-description-title {
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  color: var(--accent);
  display: inline;
}

.other-project-description-text {
  font-family: "Roboto", sans-serif;
  display: inline;
}

/* tags */

.project-tags {
  display: flex;
  flex-wrap: wrap;
}

.project-tag {
  font-family: "Roboto", sans-serif;
  color: var(--white);
  font-weight: 400;
  background-color: var(--tagbg);
  text-decoration: none;
  font-size: 12px;
  line-height: 12px;
  padding: 4px 6px;
  margin: 6px 6px 0 0;
}

/* MY THOUGHTS */

/* full size entries */

.my-thoughts {
  background-color: var(--white);
}

.my-thoughts-container {
  display: grid;
  gap: 30px;
}

.my-thoughts-entry {
  grid-column: span 2;
}

.my-thoughts-entry-header {
  height: 200px;
}

.my-thoughts-entry-image {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.my-thoughts-entry-date {
  text-transform: uppercase;
  color: var(--accent);
  font-family: "Roboto", sans-serif;
  padding-top: 35px;
}

.my-thoughts-entry-title {
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  padding-top: 2px;
  line-height: 1.4;
  font-size: 20px;
}

.my-thoughts-entry-text {
  font-family: "Roboto", sans-serif;
  line-height: 1.6;
  padding-top: 2px;
}

/* more thoughts */

.more-thoughts-container {
  display: grid;
  gap: 15px;
}

.more-thoughts-entry {
  line-height: 1.4;
}

.more-thoughts-entry-date {
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  color: var(--accent);
  display: inline;
}

.more-thoughts-entry-title {
  display: inline;
  font-family: "Roboto", sans-serif;
}

/* SKILLS */

.skills {
  background-color: var(--maincolour);
  text-align: center;
}

.skills-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: fit-content fit-content;
  gap: 10px;
}

.skill-grid-upcoming {
  grid-row-start: 2;
}

.skill-grid-title {
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  color: var(--accent);
  padding-bottom: 3px;
}

.skill-grid-list {
  font-family: "Roboto", sans-serif;
  line-height: 1.6;
}

/* FOR MORE */

.for-more {
  background-color: var(--white);
}

.for-more-icons {
  display: grid;
  grid-template-columns: repeat(3, 95px);
  justify-content: center;
  gap: 25px;
}

.for-more-icon-container {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  border: 2px solid var(--heading);
  display: grid;
  margin: 0 auto;
}

.for-more-icon {
  width: 28px;
  height: 28px;
  align-self: center;
  justify-self: center;
  fill: var(--heading);
}

.for-more-entry-site-name {
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Roboto", sans-serif;
  color: var(--heading);
  text-align: center;
  padding-top: 15px;
  font-size: 15px;
  line-height: 1.3;
}

/* FOOTER */

.footer {
  background-color: var(--accent);
}

.footer-title {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-size: 25px;
  text-transform: uppercase;
  text-align: center;
  padding-bottom: 40px;
  color: white;
}

.footer-text {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  font-size: 18px;
  text-align: center;
  color: var(--white);
  line-height: 1.6;
}

/* MOBILE */

@media (max-width: 669px) {
  .hidden-on-mobile {
    display: none;
  }
}

/* TABLET & DESKTOP */

@media (min-width: 668px) {
  .hidden-on-tablet-and-desktop {
    display: none;
  }

  .section-title {
    font-size: 30px;
  }

  .main-header {
    height: 500px;
  }

  .header-text-wrapper {
    left: 23%;
  }

  .profile-image {
    right: 22%;
  }

  .featured-projects-container {
    grid-template-columns: 1fr 1fr;
  }

  .my-thoughts-container {
    grid-template-columns: 1fr 1fr;
  }

  .skills-container {
    grid-template-columns: repeat(3, 1fr);
  }

  .for-more-icons {
    gap: 20px;
    grid-template-columns: repeat(3, 130px);
  }

  .for-more-icon-container {
    width: 90px;
    height: 90px;
  }

  .for-more-icon {
    width: 40px;
    height: 40px;
  }

  .for-more-entry-site-name {
    text-align: center;
    padding-top: 15px;
    font-size: 15px;
  }
}

